프로젝트 리스트뷰 오류 수정 - 리사이클러뷰
프로젝트 레이아웃 수정

파이어베이스 데이터베이스 저장 수정

--- a/app/src/main/res/layout/activity_create__kanban1.xml
+++ b/app/src/main/res/layout/activity_create__kanban1.xml
@@ -188,7 +188,7 @@
             android:layout_width="130dp"
             android:layout_height="35dp"
             android:layout_marginRight="50dp"
-            android:text="메인화면"
+            android:text="MY 프로젝트"
             android:background="#E1E1E1"
             android:textStyle="bold" />
 
@@ -197,7 +197,7 @@
             android:layout_width="130dp"
             android:layout_height="35dp"
             android:onClick="toAlarm"
-            android:text="알림함"
+            android:text="MY 알림함"
             android:background="#E1E1E1"
             android:textStyle="bold" />
 
