--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:background="#f4f4f4"
-            android:hint="Email"
+            android:hint="아이디 (이메일 주소)"
             android:padding="10dp" />
 
         <EditText
@@ -96,7 +96,7 @@
             android:background="#ff8700"
             android:gravity="center"
             android:onClick="toJoin"
-            android:text="register"
+            android:text="회원가입"
             android:textColor="#ffffff"
             android:textStyle="bold" />
 
@@ -110,7 +110,7 @@
             android:background="#f4f4f4"
             android:gravity="center"
             android:onClick="findIDPW"
-            android:text="ID/비밀번호찾기"
+            android:text="ID/PW 찾기"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textStyle="bold" />
 
