--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,12 @@
     >
     
     <Button
+        android:id="@+id/btnNewProject"
         android:layout_width="350dp"
         android:layout_height="45dp"
         android:layout_gravity="center"
         android:background="#ffffff"
-        android:onClick="addProject"
+
         android:text="+ 새 프로젝트 만들기"
         android:textColor="#ff8700"
         android:textSize="20dp"
@@ -108,7 +109,7 @@
             android:layout_width="130dp"
             android:layout_height="35dp"
             android:layout_marginRight="50dp"
-            android:text="메인화면"
+            android:text="MY 프로젝트 "
             android:background="#FFBB00"
             android:textColor="#000000"
             android:textStyle="bold" />
@@ -118,7 +119,7 @@
             android:layout_width="130dp"
             android:layout_height="35dp"
             android:onClick="toAlarm"
-            android:text="알림함"
+            android:text="My 알림함"
             android:background="#E1E1E1"
             android:textStyle="bold" />
 
@@ -135,5 +136,6 @@
         android:layout_marginBottom="16dp"
         android:layout_above="@+id/linearLayout9"
         android:layout_alignRight="@+id/linearLayout2"
-        android:layout_alignEnd="@+id/linearLayout2" />
+        android:layout_alignEnd="@+id/linearLayout2"
+        android:visibility="gone"/>
 </RelativeLayout>
